--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
         <li>item #5</li>
       </ul>
     </nav>
+    <section>
+      <div class="container">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+          nesciunt culpa in, sequi doloremque distinctio provident ipsum
+          obcaecati ad quidem at nihil error fugit minus non sint animi
+          asperiores ullam.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
