--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
       </ul>
     </nav>
     <section>
-      <div class="container">
+      <div class="hero">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+          nesciunt culpa in, sequi doloremque distinctio provident ipsum
+          obcaecati ad quidem at nihil error fugit minus non sint animi
+          asperiores ullam.
+        </p>
+      </div>
+    </section>
+    <section>
+      <div class="articulo">
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
           nesciunt culpa in, sequi doloremque distinctio provident ipsum
