--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>App Web</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>Titulo</h1>
-    <nav>
-      <ul>
-        <li>item #1</li>
-        <li>item #2</li>
-        <li>item #3</li>
-        <li>item #4</li>
-        <li>item #5</li>
-      </ul>
-    </nav>
   </body>
 </html>
