--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Blog</li>
+        <li>Contacto</li>
+      </ul>
+    </nav>
     <h1>Titulo</h1>
   </body>
 </html>
