imagen en header

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>Blog</li>
-        <li>Contacto</li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <img src="./img/lens.png" alt="lens" />
+        <ul>
+          <li>Home</li>
+          <li>Blog</li>
+          <li>Contacto</li>
+        </ul>
+      </nav>
+    </header>
     <h1>Titulo</h1>
   </body>
 </html>
