--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
       </ul>
     </nav>
     <h1>Titulo</h1>
+    <section></section>
+
+    <footer>
+      Copyright © 2020 Blog Template Inc. All rights reserved.
+    </footer>
   </body>
 </html>
