--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
     </header>
-    <h1>Titulo</h1>
+    <h1>Bienvenido al Blog</h1>
     <section></section>
 
     <footer>
