git ignore file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       </nav>
     </header>
     <h1>Titulo</h1>
-    <section></section>
+    <section>
+      <video width="320" height="240" controls>
+        <source src="https://i.imgur.com/atRtXuM.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </section>
 
     <footer>
       Copyright © 2020 Blog Template Inc. All rights reserved.
