--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         Your browser does not support the video tag.
       </video>
     </section>
-
+    <section>
+      <h2>Experimento</h2>
+    </section>
     <footer>
       Copyright © 2020 Blog Template Inc. All rights reserved.
     </footer>
