--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <section>
       <h2>Experimento</h2>
     </section>
+    <section>
+      <h2>Experimento 2</h2>
+    </section>
     <footer>
       Copyright © 2020 Blog Template Inc. All rights reserved.
     </footer>
